--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
             <div class="box b">
                 <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-3@s uk-margin uk-card-hover" uk-grid>
                         <div class="uk-card-media-left uk-cover-container">
-                            <img src="https://imgplaceholder.com/420x320/ff7f7f/333333/fa-image" alt="" uk-cover>
+                            <img src="thumbnail.jpeg" alt=""  uk-cover>
                             <canvas width="400" height="400"></canvas>
                         </div>
                     <!-- <div> -->
