--- a/public/index.html
+++ b/public/index.html
@@ -140,30 +140,35 @@
                 <h1>Projects</h1>
             </div>
             <div class="box d">
-                    
-                <div class="uk-child-width-1@s" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                            <h3 class="uk-card-title">Calender Parser</h3>
-                            <p>I am a very uninteresting person, with some insignificant peculiarties. I love cakes. I love haagen dasas</p>
-                        </div>
+                
+                <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-3@s uk-margin uk-card-hover" uk-grid>
+                    <div class="uk-card-media-left uk-cover-container">
+                        <img src="calApp.png" alt=""  uk-cover style="margin-left: 150px">
+                        <canvas width="600" height="400"></canvas>
                     </div>
-                </div>
-
-                <div class="uk-child-width-1@s" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                            <h3 class="uk-card-title"></h3>
-                            <p>I am a very uninteresting person, with some insignificant peculiarties. I love cakes. I love haagen dasas</p>
-                        </div>
+                    <div class="uk-card-body uk-width-expand@m">
+                        <div class="uk-card-badge uk-label">C, Node, HTML, CSS, JS</div>
+                        <h3 class="uk-card-title">Calender Application with Minimal Parser</h3>
+                        <p>For a school assignment I developed a calendar parser which allows you to create calendars with events, and alarms using the RC5545 calendar spec.</p>
+                        <p>
+                            The parser is minimally designed from scratch using C (a Makefile is included with the source code). The webapp is deployed using a Node JS backend 
+                            and a HTML, CSS, JS frontend. 
+                            Very basic database elements have also been implemented, but this can only currently be used with a UoG School Of Computer Science administered database access.
+                        </p>
+                        <p>
+                            The app has not been deployed but one can use it and look at any source code in my personal github page.
+                        </p>
                     </div>
-                </div>
+                </div>  
 
                 <div class="uk-child-width-1@s" uk-grid>
                     <div>
                         <div class="uk-card uk-card-default uk-card-small uk-card-body">
                             <h3 class="uk-card-title">Student Degree Planner</h3>
-                            <p>I am a very uninteresting person, with some insignificant peculiarties. I love cakes. I love haagen dasas</p>
+                            <p>
+                                The Degree Planner is a simple planner app developed using Java and Java's integrated GUI framework, Swing. It can be used as a guide specifically 
+                                for UoG students to plan and organize a schedule for the different School of Computer Science offerings 
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -177,19 +182,54 @@
                 <div class="uk-child-width-1@s" uk-grid>
                     <div>
                         <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                            <h3 class="uk-card-title">Welcome to this horrible website</h3>
-                            <p>I am a very uninteresting person, with some insignificant peculiarties. I love cakes. I love haagen dasas</p>
+                                <div class="uk-card-badge uk-label">Java, SQL, T-SQL, Oracle, Microsoft</div>
+
+                            <h3 class="uk-card-title">Junior Programmer - <a href="http://www.jomarsoftcorp.com/">Jomar SoftCorp</a></h3>
+                            <p>Jomar softcorp provides a flexible software system for industry, utility, and insurance companies.</p>
+                            <p>
+                                My role includes making adjustments, modifications to the Jomar ERP software and client databases.
+                                Some of the technologies I use on the day-to-day basis are the Java programming language, with eclipse as the standard
+                                IDE used, Microsoft SQL, Oracle SQL. 
+                            </p>
                         </div>
                     </div>  
                 </div>              
+                <!-- <div class="uk-child-width-1@s" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-small uk-card-body">
+                            <h3 class="uk-card-title">Home Theatre Sales - Best Buy Canada</h3>
+                            <p>Best Buy is a retailer of consumer electronics and related services.</p>
+                            <p>
+                                My role is to provide sales and advisory services to every customer walking through that door.
+                            </p>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+
+            <div class="box g">
+                <h1>Contact</h1>
+            </div>
+            <div class="box h">
                 <div class="uk-child-width-1@s" uk-grid>
                     <div>
                         <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                            <h3 class="uk-card-title">Welcome to this horrible website</h3>
-                            <p>I am a very uninteresting person, with some insignificant peculiarties. I love cakes. I love haagen dasas</p>
+                            <h3 class="uk-card-title">Send a message!</h3>
+                            <form>
+                                <fieldset class="uk-fieldset">
+                                    <!-- <legend class="uk-legend">Legend</legend> -->
+                                    <div class="uk-margin">
+                                        <input id="emailEntry" class="uk-input" type="text" placeholder="Email...">
+                                    </div>                
+                                    <div class="uk-margin">
+                                        <textarea id="msgbox" class="uk-textarea" rows="5" placeholder="..."></textarea>
+                                    </div>
+                                    <button type="button" id="sndmsg" class="uk-button uk-button-primary">Submit</button>      
+                                </fieldset>
+                            </form>
                         </div>
-                    </div>
-                </div>
+                    </div>  
+                </div>              
             </div>
 
         </div>
@@ -203,27 +243,4 @@
     </body>
 </html>
 
-
-<!-- 
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">C/C++</div>                                    </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Java</div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 85%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Python</div>
-                                </div>
-                                <div class="progress">
-s                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">HTML, CSS, JavaScript</div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Perl</div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Node.js</div>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Django</div>
-                                </div>
- -->
 
