--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
                     <div>
                         <div class="uk-card uk-card-default uk-card-small uk-card-body">
                             <h3 class="uk-card-title">Send a message!</h3>
-                            <form>
+                            <form id="msgform">
                                 <fieldset class="uk-fieldset">
                                     <!-- <legend class="uk-legend">Legend</legend> -->
                                     <div class="uk-margin">
