Adding Work Term Reports

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
   <head>
     <title>Waqas Bakht</title>
     <meta charset="utf-8">
@@ -126,7 +125,7 @@
                     </div> -->
                     <div class="skillsrow">
                         <div class="languages">
-                            <h3 align="center">Languages</h3>
+                            <h3 style="margin-right: 5px;" class="titleHeader" align="center">Languages</h3>
                             <h5>C/C++</h5>
                             <h5>Java</h5>
                             <h5>Python</h5>
@@ -136,27 +135,27 @@
                             <h5>Latex</h5>
                         </div>
                         <div class="skills">
-                            <h3 align="center">Skills</h3>
-                            <h5>Object Oriented</h5>
-                            <h5>Functional Progamming</h5>
-                            <h5></h5>
-                            <h5></h5>
+                            <h3 style="margin-right: 5px; margin-left: 5px;" class="titleHeader" align="center">Development Tools</h3>
+                            <h5>Git</h5>
+                            <h5>Unix Tools</h5>
+                            <h5>Many IDE's (Eclipse, Visual Studio, IntelliJ)</h5>
+                            <h5>Command Line</h5>
                             <h5></h5>
                             <h5></h5>
                             <h5></h5>    
                         </div>
                         <div class="environments">
-                            <h3 align="center">Development Environments</h3>
+                            <h3 style="margin-right: 5px; margin-left: 5px;" class="titleHeader" align="center">Environments</h3>
                             <h5>Windows</h5>
                             <h5>Mac OS</h5>
                             <h5>Linux (Ubuntu, Red Hat, Debian)</h5>
                             <h5>Android</h5>
                             <h5>IOS</h5>
-                            <h5>Motorolla M68K</h5>
+                            <h5></h5>
                             <h5></h5>
                         </div>
                         <div class="areasOfInterest">
-                            <h3 align="center">Areas of Interest</h3>
+                            <h3 style="margin-left: 5px;" class="titleHeader" align="center">Other</h3>
                             <h5>Object Oriented</h5>
                             <h5>Agile</h5>
                             <h5>Extreme Programming</h5>
@@ -209,37 +208,22 @@
             </div> -->
 
             <div class="box e">
-                <h1 align="center">Experience</h1>
-                <div class="uk-child-width-1@s" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                                <div class="uk-card-badge uk-label">Java, SQL, T-SQL, Oracle, Microsoft</div>
-
-                            <h3 class="uk-card-title">Junior Programmer - <a href="http://www.jomarsoftcorp.com/">Jomar SoftCorp</a></h3>
-                            <p>Jomar softcorp provides a flexible software system for industry, utility, and insurance companies.</p>
-                            <p>
-                                My role includes making adjustments, modifications to the Jomar ERP software and client databases.
-                                Some of the technologies I use on the day-to-day basis are the Java programming language, with eclipse as the standard
-                                IDE used, Microsoft SQL, Oracle SQL. 
-                            </p>
-                        </div>
-                    </div>  
-                </div>  
-            </div>
-            <!-- <div class="box f">
-                            
-                 <div class="uk-child-width-1@s" uk-grid>
-                    <div>
-                        <div class="uk-card uk-card-default uk-card-small uk-card-body">
-                            <h3 class="uk-card-title">Home Theatre Sales - Best Buy Canada</h3>
-                            <p>Best Buy is a retailer of consumer electronics and related services.</p>
-                            <p>
-                                My role is to provide sales and advisory services to every customer walking through that door.
-                            </p>
-                        </div>
-                    </div>
+                <h1 align="center">Work Experience</h1>
+                <div class="expbox">
+                    <h3 style="text-align: left; margin-bottom: 2px;"><a href="http://www.jomarsoftcorp.com/">Jomar Softcorp International</a>
+                        <span style="float: right;">May, 2019 - Dec, 2019</span>
+                    </h3>
+                    <h4 style="margin-top: 2px; margin-bottom: 2px;">Junior Programmer</h4>
+                    <p style="font-size: medium; margin-top: 2px; margin-bottom: 2px;">
+                        - Main job was installing feature requests and implementing modifications to customer ERP systems
+                    </p>
+                    <p style="font-size: medium; margin-top: 2px; margin-bottom: 2px;">
+                        - Used and developed in: Java, SQL (Oracle, SQL Server), C/C++, Shell Scripts, Batch Scripts, Red Hat Linux Server, Windows Server
+                    </p>
+                    <button class="btn btn-primary">Details</button>
                 </div>
-            </div> -->
+            </div>
+            
 
             <div class="box g">
                 <h1 align="center">Contact</h1>
