Work Term Report Finished

--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
                     <p style="font-size: medium; margin-top: 2px; margin-bottom: 2px;">
                         - Used and developed in: Java, SQL (Oracle, SQL Server), C/C++, Shell Scripts, Batch Scripts, Red Hat Linux Server, Windows Server
                     </p>
-                    <button class="btn btn-primary">Details</button>
+                    <a href="/jomar" class="btn btn-primary">Work Term Report</a>
                 </div>
             </div>
             
