--- a/public/wt1report.html
+++ b/public/wt1report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Waqas Bakht</title>
+    <title>Work Term 1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A Portfolio Concerning Waqas Bakht">
@@ -24,7 +24,102 @@
 
   </head>
     <body>
-        
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Work Term Report</h1>
+              <p class="lead">Jomar Softcorp International</p>
+              <p>Junior Programmer</p>
+              <p>Summer & Fall 2019</p>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="container">
+                <h3>About Jomar</h3>
+                <p>
+                    JOMAR Softcorp International is a software company that provides ERP software to Industrial, Utility, and Insurance companies. 
+                    The systems they implement are custom tailored for their customers based on their needs and industry best practices. 
+                    The Cambridge head office is where development and support is run alongside their Vancouver and Charlotte offices.  
+                </p>
+            </div>
+            <div class="container">
+                <h3>Job Decription</h3>
+                <p>
+                    My job was to implement modifications - "Mods" - which were either new changes or fixes to a customers system. I worked on a variety of customers, mostly Industrial and Utility companies. 
+                    I also worked with the Jasper Reports team to convert a large number Oracle Reports to Jasper, and helped test and develop a system to view, upload, and print these reports. 
+                </p>
+            </div>
+            <h3 align="center">Goals</h3>
+            <div class="container">
+              <h4>Goal #1: Develop or use Open-Source tools</h4>
+              <p>
+                As a lifelong fan of all that is open-source, I commited my self to incorporate the benefits I draw from using these tools to my development process at work. 
+                I began with using the right code editor. The standard IDE used at Jomar is the famous Eclipse IDE of which I'm a big fan, and this was the best option for Java 
+                Development, Debugging, and Testing done on the systems. But for SQL Query editing and general purposed code/text editing I used Visual Studio Code, which I find tremendously 
+                effective and delightful to use. It's many integrated tools for development are very useful and the great number of extentions make it infinitely customizable. 
+                The next thing I put on my workstation was this program called AHK, AutoHotKey. AHK is a hotkey program in which you can run customized operations and commands which you can assign 
+                a "HotKey" to. I used it to automate repeptive tasks like string manipulation, starting and loading programs I used on a daily basis, and much more. In finding the right
+                tools that are free to use will accelerate my work productivity and benefit me enourmously when developing for comapanies in future work terms and my overall career.
+              </p>
+            </div>
+            <div class="container">
+              <h4>Goal #2: Become more fluent in Jomar Technology Stack</h4>
+              <p>
+                Jomar has been developing software for over 35 years, and over this time the technology used has obviously changed very dramatically. The current version uses a modern client-server model 
+                hosted on remote web servers. Java is the primary language used for the application, C is also used as well as a bunch of other scripting languages responsible for automating processes and programs.
+                The UoG Software Engineering program already equipped me with the knowledge of Java and C, and programming in most of the current popular languages, but I hadn't seen them used in a large scale 
+                system. So my main goal was to learn how everything works together from the frontend to the backend, and the server type, how it is deployed and how the database design works with the systems. 
+              </p>
+            </div>
+            <div class="container">
+              <h4>Goal #3: Understand the scope of Jomar systems</h4>
+              <p>
+                Jomar's software has a wide range of uses, and from the very start of my work term I wanted to measure this to understand the full scope and reach of Jomar's applications. 
+                I found that although Jomar is a smaller company, compared to some of the ERP software giants such as Oracle or SAP, its software affects some of the largest corporations all the way down to
+                the individual residents living in home. The software is very flexible and can be used in almost any way the user desires, and this makes it an attractive option for manufacturers
+                looking for software that changes with their own manufacturing process and design. Insurance companies are very attracted to the accounting and financial aspects of Jomar software and 
+                use it for much of the data storage and reporting they might require. From recognizing the wide range of sectors that Jomar provides services to, I was able to realize that not only corporations benefit from 
+                using it's software but indirectly the average consumer or resident who pays a utility bill can also be affected. This insight deviates somewhat from the goal of my program and co-op work terms, but I think 
+                it is very important to know how impactful the work done by any person is, regardless of their discipline, and Jomar has shown me how to seek out this information which I think will be immensly helpful
+                in finding the right places to contribute my efforts and skills to.
+              </p>
+            </div>
+            <div class="container">
+              <h4>Goal #4: Gain an understanding of practical Database Design</h4>
+              <p>
+                With value of data increasing year by year, knowing the standard set of tools used to store, process, and access large sets of data becomes a highly desired skill. As a software developer 
+                it is known that at some point in our careers we will come across SQL and Databases. So for these reasons I wanted to work with a company where I could develop my skills in SQL. 
+                Fortunatly Jomar is a great place for anyone looking to work with databases. Much of my work was split between working with the backend for their cloud applications and in database development
+                which involved query development/optimization, table amendments/creation, a ton of work with JDBC drivers (Java Database Connectivity). One of the larger projects I worked on was to work 
+                on creating a reporting environment to add to a customer application. Basically the task at hand was to take data from the customer's database and present them in readable, printable formats so the employees of our 
+                customer could view these reports for their work. So for this we worked greatly on modifying existing queries and developing new ones, as well as creating the environments to view and download these reports.
+                Now the work term is over and I have left Jomar with a massive amount of knowledge about SQL and databases and I feel that my goal of becoming an expert of database software is within my reach.
+              </p>
+            </div> 
+            <h3 align="center">Conclusion</h3>
+            <div class="container">
+              <p>
+                So far in my program, my co-op experience has been the most important contribution to the development of myself as a software engineer. It has given me a first hand look at what it means to write useful 
+                software and how I can become more efficient as a developer, and realize the impact of my work while also equipping me with the skills needed to be sucessful in this career path. Many of the goals I set when beginning 
+                my work terms were met and I know with all the new things learnt at Jomar I will reach even further heights during the rest of my career.
+              </p>
+            </div>
+            <h3 align="center">Acknowledgements</h3>
+            <div class="container">
+              <p>
+                Big thanks to the Jomar Management team, John Jr., John Sr., Paul, Mark, and Rose. Thanks to Pierre for being a good friend and mentor to me during my time their. Thanks to Chris for helping out with 
+                any and all issues without hesitation. Thanks to Jacob for being a great guy and being awesome to work with. Big thanks to Jane for her unending kindness and guidance during my time there.
+                Thanks to the entire Jomar team for accepting me and showing me kindness and giving me the oppurtunity to develop as a developer.
+              </p>
+            </div>
+        </div>
+
+        <div class="container-fluid wt-filler">
+          <p>Written and Developed by Waqas Bakht</p>
+          <p>University of Guelph - School of Computer Science</p>
+          <p>Software Engineering</p>
+          <a class="btn btn-primary" href="/">Back to Home</a>
+        </div>
         <!-- </div> -->
         <script src="/index.js"></script>
         <!-- UIKIT -->
